change stores logo

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -647,7 +647,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
     <div class="spns_item tag_creativeSpns">
       <a href="https://stores.jp/" target="_blank">
         <figure class="spns_thm">
-          <img src="{{ '/assets/kaigi01/logo_stores.svg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+          <img src="{{ '/assets/kaigi01/logo_stores.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
         </figure>
       </a>
       <a class="spns_txt" href="https://stores.jp/" target="_blank">ストアーズ・ドット・ジェーピー 株式会社</a>
@@ -756,7 +756,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
     <div class="stores_pttn01 rellax" data-rellax-speed="1"></div>
     <div class="stores_pttn02 rellax" data-rellax-speed="1"></div>
     <div class="stores_ttl">クリエイティブスポンサー & PR by STORES.jp</div>
-    <h2><img class="stores_logo" src="{{ '/assets/kaigi01/logo_stores.svg?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp"></h2>
+    <h2><img class="stores_logo" src="{{ '/assets/kaigi01/logo_stores.png?v=' | append: site.github.build_revision | relative_url }}" alt="STORES.jp"></h2>
     <h3>Rubyエンジニアを<br class="sp">募集しています！</h3>
     <div class="btn_main">
       <a href="https://hey.jp/jobs/" target="_blank">採用ページはこちら</a>
@@ -786,7 +786,8 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
           <a class="btn_link" href="https://hey.jp/events/hello-hey/" target="_blank"><span></span><span></span></a>
         </h4>
         <p class="stores_col_txt">
-          毎月第二・第四 木曜日20:00〜行っています。heyってどんな会社なんだろう。何をやっていくんだろう。どういう人がいるんだろう。ちょっとでも興味を持ったら、カジュアルに遊びにきてください！
+どんな会社なんだろう、どんなエンジニアがいるんだろう。カジュアルに遊びに来れるイベントを毎月第二・第四木曜日20:00〜行っています！
+<br>※ヘイ株式会社は、コイニー株式会社と経営統合し設立した組織です
         </p>
       </div>
     </div>
