fix sponsers layout in SP view

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -786,8 +786,8 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
           <a class="btn_link" href="https://hey.jp/events/hello-hey/" target="_blank"><span></span><span></span></a>
         </h4>
         <p class="stores_col_txt">
-どんな会社なんだろう、どんなエンジニアがいるんだろう。カジュアルに遊びに来れるイベントを毎月第二・第四木曜日20:00〜行っています！
-<br>※ヘイ株式会社は、コイニー株式会社と経営統合し設立した組織です
+どんな会社なんだろう、どんなエンジニアがいるんだろう。カジュアルに社内へ遊びに行けるようなイベントを毎月第二・第四木曜日20:00〜行っています！
+<br>※ヘイ株式会社はコイニー株式会社と経営統合し設立した組織です
         </p>
       </div>
     </div>
