--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -707,12 +707,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
       </figure>
       <p class="organizers_txt"><a href="https://twitter.com/mtkasima" target="_blank">@mtkasima</a></p>
     </div><!-- .organizers_item -->
-    <div class="organizers_item">
+    <!-- <div class="organizers_item">
       <figure class="organizers_thm">
         <img src="{{ '/assets/kaigi01/organizers/yuriko12111.png?v=' | append: site.github.build_revision | relative_url }}" alt="yuriko12111">
       </figure>
       <p class="organizers_txt"><a href="https://twitter.com/yuriko12111" target="_blank">@yuriko12111</a></p>
-    </div><!-- .organizers_item -->
+    </div>.organizers_item -->
     <div class="organizers_item">
       <figure class="organizers_thm">
         <img src="{{ '/assets/kaigi01/organizers/cobafan.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="cobafan">
