add links in organizers thumbnails

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -720,39 +720,51 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
   <h2 class="ttl_main">Heisei.rb Organizers</h2>
   <div class="organizers_col">
     <div class="organizers_item">
-      <figure class="organizers_thm">
-        <img src="{{ '/assets/kaigi01/organizers/tashiro_rb.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="tashiro_rb">
-      </figure>
+      <a href="https://twitter.com/tashiro_rb" target="_blank">
+        <figure class="organizers_thm">
+          <img src="{{ '/assets/kaigi01/organizers/tashiro_rb.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="tashiro_rb">
+        </figure>
+      </a>
       <p class="organizers_txt"><a href="https://twitter.com/tashiro_rb" target="_blank">@tashiro_rb</a></p>
     </div><!-- .organizers_item -->
     <div class="organizers_item">
-      <figure class="organizers_thm">
-        <img src="{{ '/assets/kaigi01/organizers/mkashima.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="mkashima">
-      </figure>
+      <a href="https://twitter.com/mtkasima" target="_blank">
+        <figure class="organizers_thm">
+          <img src="{{ '/assets/kaigi01/organizers/mkashima.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="mkashima">
+        </figure>
+      </a>
       <p class="organizers_txt"><a href="https://twitter.com/mtkasima" target="_blank">@mtkasima</a></p>
     </div><!-- .organizers_item -->
     <div class="organizers_item">
-      <figure class="organizers_thm">
-        <img src="{{ '/assets/kaigi01/organizers/yuriko12111.png?v=' | append: site.github.build_revision | relative_url }}" alt="yuriko12111">
-      </figure>
+      <a href="https://twitter.com/yuriko12111" target="_blank">
+        <figure class="organizers_thm">
+          <img src="{{ '/assets/kaigi01/organizers/yuriko12111.png?v=' | append: site.github.build_revision | relative_url }}" alt="yuriko12111">
+        </figure>
+      </a>
       <p class="organizers_txt"><a href="https://twitter.com/yuriko12111" target="_blank">@yuriko12111</a></p>
     </div><!-- .organizers_item -->
     <div class="organizers_item">
-      <figure class="organizers_thm">
-        <img src="{{ '/assets/kaigi01/organizers/cobafan.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="cobafan">
-      </figure>
+      <a href="https://twitter.com/cobafan" target="_blank">
+        <figure class="organizers_thm">
+          <img src="{{ '/assets/kaigi01/organizers/cobafan.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="cobafan">
+        </figure>
+      </a>
       <p class="organizers_txt"><a href="https://twitter.com/cobafan" target="_blank">@cobafan</a></p>
     </div><!-- .organizers_item -->
     <div class="organizers_item">
-      <figure class="organizers_thm">
-        <img src="{{ '/assets/kaigi01/organizers/kfukai23.png?v=' | append: site.github.build_revision | relative_url }}" alt="kfukai23">
-      </figure>
+      <a href="https://twitter.com/kfukai23" target="_blank">
+        <figure class="organizers_thm">
+          <img src="{{ '/assets/kaigi01/organizers/kfukai23.png?v=' | append: site.github.build_revision | relative_url }}" alt="kfukai23">
+        </figure>
+      </a>
       <p class="organizers_txt"><a href="https://twitter.com/kfukai23" target="_blank">@kfukai23</a></p>
     </div><!-- .organizers_item -->
     <div class="organizers_item">
-      <figure class="organizers_thm">
-        <img src="{{ '/assets/kaigi01/organizers/ryamakuchi.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="ryamakuchi">
-      </figure>
+      <a href="https://twitter.com/ryamakuchi" target="_blank">
+        <figure class="organizers_thm">
+          <img src="{{ '/assets/kaigi01/organizers/ryamakuchi.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="ryamakuchi">
+        </figure>
+      </a>
       <p class="organizers_txt"><a href="https://twitter.com/ryamakuchi" target="_blank">@ryamakuchi</a></p>
     </div><!-- .organizers_item -->
   </div>
