kaito 部分をコメントアウト

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -749,14 +749,14 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
       </a>
       <p class="organizers_txt"><a href="https://twitter.com/cobafan" target="_blank">@cobafan</a></p>
     </div><!-- .organizers_item -->
-    <div class="organizers_item">
+    <!-- <div class="organizers_item">
       <a href="https://twitter.com/kfukai23" target="_blank">
         <figure class="organizers_thm">
           <img src="{{ '/assets/kaigi01/organizers/kfukai23.png?v=' | append: site.github.build_revision | relative_url }}" alt="kfukai23">
         </figure>
       </a>
-      <p class="organizers_txt"><a href="https://twitter.com/kfukai23" target="_blank">@kfukai23</a></p>
-    </div><!-- .organizers_item -->
+      <p class="organizers_txt"><a href="https://twitter.com/kfukai23" target="_blank">@kfukai23</a></p> -->
+    <!-- </div>.organizers_item -->
     <div class="organizers_item">
       <a href="https://twitter.com/ryamakuchi" target="_blank">
         <figure class="organizers_thm">
