Add mkmn252 to organizers

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -735,12 +735,6 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
       </a>
       <p class="organizers_txt"><a href="https://twitter.com/mtkasima" target="_blank">@mtkasima</a></p>
     </div><!-- .organizers_item -->
-    <!-- <div class="organizers_item">
-      <figure class="organizers_thm">
-        <img src="{{ '/assets/kaigi01/organizers/yuriko12111.png?v=' | append: site.github.build_revision | relative_url }}" alt="yuriko12111">
-      </figure>
-      <p class="organizers_txt"><a href="https://twitter.com/yuriko12111" target="_blank">@yuriko12111</a></p>
-    </div>.organizers_item -->
     <div class="organizers_item">
       <a href="https://twitter.com/cobafan" target="_blank">
         <figure class="organizers_thm">
@@ -749,14 +743,6 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
       </a>
       <p class="organizers_txt"><a href="https://twitter.com/cobafan" target="_blank">@cobafan</a></p>
     </div><!-- .organizers_item -->
-    <!-- <div class="organizers_item">
-      <a href="https://twitter.com/kfukai23" target="_blank">
-        <figure class="organizers_thm">
-          <img src="{{ '/assets/kaigi01/organizers/kfukai23.png?v=' | append: site.github.build_revision | relative_url }}" alt="kfukai23">
-        </figure>
-      </a>
-      <p class="organizers_txt"><a href="https://twitter.com/kfukai23" target="_blank">@kfukai23</a></p> -->
-    <!-- </div>.organizers_item -->
     <div class="organizers_item">
       <a href="https://twitter.com/ryamakuchi" target="_blank">
         <figure class="organizers_thm">
@@ -764,6 +750,14 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
         </figure>
       </a>
       <p class="organizers_txt"><a href="https://twitter.com/ryamakuchi" target="_blank">@ryamakuchi</a></p>
+    </div><!-- .organizers_item -->
+    <div class="organizers_item">
+      <a href="https://twitter.com/mkmn252" target="_blank">
+        <figure class="organizers_thm">
+          <img src="{{ '/assets/kaigi01/organizers/mkmn.png?v=' | append: site.github.build_revision | relative_url }}" alt="mkmn">
+        </figure>
+      </a>
+      <p class="organizers_txt"><a href="https://twitter.com/mkmn252" target="_blank">@mkmn252</a></p>
     </div><!-- .organizers_item -->
   </div>
 </section>
