--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -712,7 +712,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
     </div><!--.spns_item-->
   </div>
   <div class="btn_main">
-    <a href="https://hackmd.io/@VfQFZFdfR9qLhNfa7bX1cQ/ry77nEz_S" target="_blank">become a sponsor</a>
+    <a href="https://gist.github.com/ryamakuchi/66e98b5fb7e468516e432e217a889fa0" target="_blank">become a sponsor</a>
   </div>
 </section>
 
