--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -80,7 +80,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
         <div class="visual_info">
           <div class="visual_info_inner rellax" data-rellax-speed="1">
             <p class="visual_info_01">2019.12.14<span>sat.</span></p>
-            <p class="visual_info_02">12:50-19:15</p>
+            <p class="visual_info_02">12:50-19:30</p>
             <p class="visual_info_03">株式会社ドリコム</p>
             <p class="visual_info_04">セミナールーム＆カフェ</p>
             <figure class="visual_info_plate">
@@ -409,6 +409,21 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </div>
             </div>
           </article><!--CALENDAR CARD-->
+          <article class="schedules_main_item __a_item __a_11">
+            <div class="schedules_main_item_header">
+              <p class="schedules_main_item_header_time">17:40 - 17:50</p>
+            </div>
+            <div class="schedules_main_item_body">
+              <figure class="schedules_main_item_body_thm">
+                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+              </figure>
+              <div class="schedules_main_item_body_txt">
+                <div class="tag_session">session</div>
+                <!-- <p>@username</p> -->
+                <h4>登壇者募集中</h4>
+              </div>
+            </div>
+          </article><!--CALENDAR CARD-->
         </div>
 
         <div class="breakline"></div>
@@ -563,6 +578,21 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               </div>
             </div>
           </article><!--CALENDAR CARD-->
+          <article class="schedules_main_item __b_item __b_11">
+            <div class="schedules_main_item_header">
+              <p class="schedules_main_item_header_time">17:40 - 17:50</p>
+            </div>
+            <div class="schedules_main_item_body">
+              <figure class="schedules_main_item_body_thm">
+                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+              </figure>
+              <div class="schedules_main_item_body_txt">
+                <div class="tag_session">session</div>
+                <!-- <p>@username</p> -->
+                <h4>登壇者募集中</h4>
+              </div>
+            </div>
+          </article><!--CALENDAR CARD-->
         </div>
 
         <article class="schedules_main_item __long_item __long_01">
@@ -588,7 +618,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
         </article><!--calender card-->
         <article class="schedules_main_item __long_item __long_03">
           <div class="schedules_main_item_header">
-            <p class="schedules_main_item_header_time">17:50 - 18:35</p>
+            <p class="schedules_main_item_header_time">18:05 - 18:50</p>
           </div>
           <div class="schedules_main_item_body">
             <div class="schedules_main_item_body_txt">
@@ -599,21 +629,21 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
         </article><!--calender card-->
         <article class="schedules_main_item __long_item __long_04">
           <div class="schedules_main_item_header">
-            <p class="schedules_main_item_header_time">18:35 - 18:40</p>
+            <p class="schedules_main_item_header_time">18:50 - 18:55</p>
             <div class="tag_lt">LT</div>
             <p class="schedules_main_item_header_txt">飛込み01</p>
           </div>
         </article><!--calender card-->
         <article class="schedules_main_item __long_item __long_05">
           <div class="schedules_main_item_header">
-            <p class="schedules_main_item_header_time">18:40 - 18:45</p>
+            <p class="schedules_main_item_header_time">18:55 - 19:00</p>
             <div class="tag_lt">LT</div>
             <p class="schedules_main_item_header_txt">飛込み02</p>
           </div>
         </article><!--calender card-->
         <article class="schedules_main_item __long_item __long_06">
           <div class="schedules_main_item_header">
-            <p class="schedules_main_item_header_time">18:45 - 19:15</p>
+            <p class="schedules_main_item_header_time">19:00 - 19:30</p>
           </div>
           <div class="schedules_main_item_body">
             <figure class="schedules_main_item_body_thm">
@@ -628,7 +658,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
         </article><!--calender card-->
         <article class="schedules_main_item __long_item __long_07">
           <div class="schedules_main_item_header">
-            <p class="schedules_main_item_header_time">19:30 - 21:30</p>
+            <p class="schedules_main_item_header_time">19:45 - 21:30</p>
             <p class="schedules_main_item_header_txt">懇親会</p>
           </div>
           <div class="schedules_main_item_body"></div>
