登壇者募集中 =>  登壇者選考中

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -270,7 +270,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -285,7 +285,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -300,7 +300,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -315,7 +315,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -330,7 +330,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -360,7 +360,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -375,7 +375,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -390,7 +390,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -405,7 +405,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -420,7 +420,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -440,7 +440,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -455,7 +455,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -470,7 +470,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -485,7 +485,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -500,7 +500,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -529,7 +529,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -544,7 +544,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -559,7 +559,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -574,7 +574,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -589,7 +589,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>登壇者選考中</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
