--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -169,10 +169,10 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
     </div>
 
     <div class="btn_wrapper">
-      <div class="btn_cfp">
+      <div class="btn_cfp btn_comming">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdMMnPFGK4QsJtIkZ0QvoEsEbRXKJebNILGW-IYVzqbIOEBgw/viewform" target="_blank">become a speaker</a>
       </div>
-      <div class="btn_main btn_comming tag_comming">
+      <div class="btn_main tag_comming">
         <a href="https://heiseirb.connpass.com/" target="_blank">registration</a>
       </div>
     </div>
