add keyonote speaker's title

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -613,7 +613,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             <div class="schedules_main_item_body_txt">
               <div class="tag_keynote">keynote</div>
               <p>@yui-knk</p>
-              <h4>TBD</h4>
+              <h4>What is expected?</h4>
             </div>
           </div>
         </article><!--calender card-->
@@ -653,7 +653,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             <div class="schedules_main_item_body_txt">
               <div class="tag_keynote">keynote</div>
               <p>@koic</p>
-              <h4>TBD</h4>
+              <h4>Breaking Change</h4>
             </div>
           </div>
         </article><!--calender card-->
