--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -507,7 +507,21 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
           </article><!--CALENDAR CARD-->
           <article class="schedules_main_item __b_item __b_06">
             <div class="schedules_main_item_header">
-              <p class="schedules_main_item_header_time">15:25 - 16:15</p>
+              <p class="schedules_main_item_header_time">15:25 - 15:40</p>
+            </div>
+            <div class="schedules_main_item_body">
+              <figure class="schedules_main_item_body_thm">
+                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+              </figure>
+              <div class="schedules_main_item_body_txt">
+                <div class="tag_session">Session</div>
+                <h4>登壇者選考中</h4>
+              </div>
+            </div>
+          </article><!--CALENDAR CARD-->
+          <article class="schedules_main_item __b_item __b_06_02">
+            <div class="schedules_main_item_header">
+              <p class="schedules_main_item_header_time">15:40 - 16:15</p>
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
