スケジュールに3行のタイトルを収めるようにした

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -406,7 +406,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
         <div class="breakline"></div>
 
         <div id="sche_b" class="schedules_b">
-          <article class="schedules_main_item __b_item __b_01">
+          <article class="schedules_main_item __b_item __b_01 __3lines">
             <div class="schedules_main_item_header">
               <p class="schedules_main_item_header_time">13:45 - 14:00</p>
             </div>
@@ -417,7 +417,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
                 <!-- <p>@username</p> -->
-                <h4>登壇者募集中</h4>
+                <h4>Ruby2.7以降のiseqのバイナリ表現の改善について、Rubyアソシエーション開発助成金2019採択プロジェクトの途中経過について</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
