--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -790,6 +790,14 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
       </a>
       <p class="organizers_txt"><a href="https://twitter.com/mkmn252" target="_blank">@mkmn252</a></p>
     </div><!-- .organizers_item -->
+    <div class="organizers_item">
+      <a href="https://twitter.com/yu_suke1994" target="_blank">
+        <figure class="organizers_thm">
+          <img src="{{ '/assets/kaigi01/organizers/yu_suke1994.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="yu_suke1994">
+        </figure>
+      </a>
+      <p class="organizers_txt"><a href="https://twitter.com/yu_suke1994" target="_blank">@yu_suke1994</a></p>
+    </div><!-- .organizers_item -->
   </div>
 </section>
 
