Modify sponsors layout

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -692,7 +692,7 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
       <a class="spns_txt" href="https://stores.jp/" target="_blank">ストアーズ・ドット・ジェーピー 株式会社</a>
     </div><!--.spns_item-->
   </div>
-  <div class="spns_col spns_col_3">
+  <div class="spns_col spns_col_4">
     <div class="spns_item">
       <!-- <a href="" target="_blank"> -->
         <figure class="spns_thm __hiring">
@@ -741,9 +741,14 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
       <!-- </a> -->
       <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
     </div><!--.spns_item-->
-  </div>
-  <div class="btn_main">
-    <a href="https://gist.github.com/ryamakuchi/66e98b5fb7e468516e432e217a889fa0" target="_blank">become a sponsor</a>
+    <div class="spns_item">
+      <!-- <a href="" target="_blank"> -->
+        <figure class="spns_thm __hiring">
+          <!-- <img src="{{ '/assets/kaigi01/logo_sponsers01.jpg?v=' | append: site.github.build_revision | relative_url }}" alt=""> -->
+        </figure>
+      <!-- </a> -->
+      <!-- <a class="spns_txt" href="" target="_blank">株式会社 会社名</a> -->
+    </div><!--.spns_item-->
   </div>
 </section>
 
