publish speaker for heiseirubykaigi!!!!!

--- a/kaigi01/index.html
+++ b/kaigi01/index.html
@@ -259,18 +259,18 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
 
       <div class="schedules_wrapper">
         <div id="sche_a" class="schedules_a">
-          <article class="schedules_main_item __a_item __a_01">
+          <article class="schedules_main_item __a_item __a_01 __3lines">
             <div class="schedules_main_item_header">
               <p class="schedules_main_item_header_time">13:45 - 14:00</p>
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/NagayamaRyoga.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@NagayamaRyoga</p>
+                <h4>Ruby2.7以降のiseqのバイナリ表現の改善について、Rubyアソシエーション開発助成金2019採択プロジェクトの途中経過について</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -280,12 +280,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/unasuke.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@yu_suke1994</p>
+                <h4>あなたのそのgem、Windowsでも動きますか？</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -295,12 +295,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/expajp.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@expajp</p>
+                <h4>ActiveSupport::Concernで開くメタプログラミングの扉</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -310,12 +310,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/hotatekaoru.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@hotatekaoru</p>
+                <h4>Railsで事業立上げのリードエンジニアになるために</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -325,12 +325,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/sanfrecce-osaka.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@sanfrecce-osaka</p>
+                <h4>Procのススメ</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -355,12 +355,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/ryamakuchi.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@ryamakuchi</p>
+                <h4>逃げちゃだめだ！RSpec を導入していく戦い</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -370,12 +370,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/kinoppyd.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@kinoppyde</p>
+                <h4>Ruby力を上げるためのコードリーディング</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -385,12 +385,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/ayumitamai97.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@ayumitamai97</p>
+                <h4>階層的クラスタリングをRubyで表現する</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -400,12 +400,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/Sean0628.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@Sean0628</p>
+                <h4>Play with Ruby</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -415,12 +415,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/tkawa.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@tkawa</p>
+                <h4>真のREST</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -435,13 +435,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/shugo.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <!-- <h4>Ruby2.7以降のiseqのバイナリ表現の改善について、Rubyアソシエーション開発助成金2019採択プロジェクトの途中経過について</h4> -->
-                <h4>登壇者選考中</h4>
+                <p>@shugo</p>
+                <h4>Rubyの動的な性質を活かす方法とTextbringerステッカー</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -451,12 +450,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/fujimura.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@fujimura</p>
+                <h4>SimpleDelegator活用のご提案</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -466,12 +465,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/AquaLamp.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@AquaLamp</p>
+                <h4>Ruby on Jeeeeeeeeets!!✨🚀✨</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -481,12 +480,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/sat0yu.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@sat0yu</p>
+                <h4>Async/Await functions in Ruby</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -496,12 +495,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/cobafan.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@cobafan</p>
+                <h4>既存RailsApplicationの高速化</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -511,11 +510,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/daikimiura.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">Session</div>
-                <h4>登壇者選考中</h4>
+                <p>@daikimiura</p>
+                <h4>RubyでJVMを実装してみる</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -539,12 +539,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/MITSUBOSHI.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@MITSUBOSHI</p>
+                <h4>Good to know YAML</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -554,12 +554,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/atomiyama.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@atomiyama</p>
+                <h4>rustで拡張モジュールを作成してgemにする</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -569,12 +569,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/ikaruga777.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@ikaruga777</p>
+                <h4>やわらか増税 〜はじめての増税対応〜</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -584,12 +584,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/mtkasima.jpeg?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@mtkasima</p>
+                <h4>ActiveRecordのpluckメソッドがおかしな挙動をしたので調べてみた</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
@@ -599,12 +599,12 @@ description: 【平成世代縛りナシ、令和元年最後の地域Ruby会議
             </div>
             <div class="schedules_main_item_body">
               <figure class="schedules_main_item_body_thm">
-                <img src="{{ '/assets/kaigi01/thm_hiring.jpg?v=' | append: site.github.build_revision | relative_url }}" alt="">
+                <img src="{{ '/assets/kaigi01/speakers/pocke.png?v=' | append: site.github.build_revision | relative_url }}" alt="">
               </figure>
               <div class="schedules_main_item_body_txt">
                 <div class="tag_session">session</div>
-                <!-- <p>@username</p> -->
-                <h4>登壇者選考中</h4>
+                <p>@pocke</p>
+                <h4>Regression Test for RuboCop</h4>
               </div>
             </div>
           </article><!--CALENDAR CARD-->
